--- a/templates/teams/team_confirm_delete.html
+++ b/templates/teams/team_confirm_delete.html
@@ -42,7 +42,7 @@
                     <form method="post" class="needs-validation" novalidate>
                         {% csrf_token %}
                         <div class="d-flex justify-content-between align-items-center">
-                            <a href="{% url 'team_detail' team_id=team.id %}" class="btn btn-outline-secondary">
+                            <a href="{% url 'teams:team_detail' team_id=team.id %}" class="btn btn-outline-secondary">
                                 <i class="fas fa-arrow-left me-2"></i>Cancel
                             </a>
                             <button type="submit" class="btn btn-danger">
